# ProyectoCPR

./: README.md  build_all.sh  lanzar_airsim.sh  lanzar_airsim_Ang.sh  lanzar_proyecto_cpr.sh  lanzar_rviz.sh  run_all.sh  run_plotjuggler.sh  settings.json
AirSimSettings/AirSimSettings_v0.0/: settings.json
docker/: Dockerfile  docker_run.bat  install_ros_deps.sh
proyecto_cpr/: CMakeLists.txt  Explicación dependencias.txt  README.md  package.xml
proyecto_cpr/src/: listar_topics.py
ros/: .gitignore  frames.gv
ros/plotjuggler/: pure_pursuit_layout.xml
ros/rosbags/: 2025-01-11-19-53-16.bag  2025-01-15-10-23-24.bag  2025-01-18-15-03-01.bag  2025-01-18-17-16-57.bag  2025-01-18-17-41-13.bag  2025-01-18-18-07-58.bag  2025-01-18-18-27-39.bag  2025-01-18-18-42-12.bag  2025-01-23-16-18-32.bag  2025-01-23-16-34-13.bag  2025-01-23-16-41-11.bag  2025-01-23-16-50-57.bag  2025-01-23-17-46-46.bag  2025-01-24-11-29-22.bag  2025-01-24-16-59-28.bag  2025-01-24-17-25-27.bag  2025-01-24-17-35-52.bag  2025-01-24-17-44-05.bag  2025-01-24-17-54-27.bag  2025-01-24-18-58-03.bag  2025-01-24-19-14-38.bag  2025-01-24-19-25-48.bag  2025-01-24-19-35-25.bag  pure_pursuit.bag
ros/src/airsim_ros_pkgs/: CMakeLists.txt
ros/src/airsim_ros_pkgs/launch/: airsim_node.launch
ros/src/proyecto_cpr_pkg/: CMakeLists.txt  package.xml
ros/src/proyecto_cpr_pkg/config/: plot_juggler_config.xml
ros/src/proyecto_cpr_pkg/launch/: Control_Actuadores_pruebas.launch  lanzar_planificador_global.launch  lanzar_pure_pursuit.launch  proyecto_cpr.launch  rviz.launch
ros/src/proyecto_cpr_pkg/msg/: CmdActuadores.msg  debuging.msg
ros/src/proyecto_cpr_pkg/rviz/: default.rviz
ros/src/proyecto_cpr_pkg/scripts/: algoritmo_burbuja.py  controlador_actuadores.py  controlador_pure_pursuit.py  planificador_global.py  planificador_local.py  slam_visual.py
ros/src/proyecto_cpr_pkg/src/: buscar_topics.py
ros/src/proyecto_cpr_pkg/srv/: NavegarHaciaDestino.srv
tools/: docker_kill.bat  lanzar_proyecto_cpr.sh  open_container_terminal.bat  start_container.bat
